update types
